// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom include 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`custom script 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`file associations only perMachine 1`] = `"Please set perMachine to true — file associations works on Windows only if installed for all users"`;

exports[`html license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`installerHeaderIcon 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`multi language license 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`one-click 1`] = `
Object {
  "win": Array [
    Object {
      "file": "1.1.0_latest.yml",
      "fileContent": Object {
        "path": "Test App ßW Setup 1.1.0.exe",
        "url": "Test App ßW Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "ia32",
      "file": "Test App ßW Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`one-click 2`] = `
Object {
  "owner": "actperepo",
  "package": "TestApp",
  "provider": "bintray",
}
`;

exports[`perMachine, no run after finish 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "path": "TestApp Setup 1.1.0.exe",
        "url": "TestApp Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "ia32",
      "file": "TestApp Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-Setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;

exports[`perMachine, no run after finish 2`] = `
Object {
  "provider": "generic",
  "url": "https://develar.s3.amazonaws.com/test/win/ia32",
}
`;

exports[`perMachine, no run after finish 3`] = `
Object {
  "path": "TestApp Setup 1.1.0.exe",
  "url": "TestApp Setup 1.1.0.exe",
  "version": "1.1.0",
}
`;

exports[`string menuCategory 1`] = `
Object {
  "win": Array [
    Object {
      "arch": "ia32",
      "file": "Test Menu Category CustomName 1.1.0.exe",
      "safeArtifactName": "test-menu-category-setup-1.1.0.exe",
      "updateInfo": null,
    },
  ],
}
`;
